# typed-json-dataclass

./: .codacy.yml  .coveragerc  .gitignore  CHANGELOG.md  Dockerfile  Makefile  Pipfile  README.md  package-lock.json  package.json  pyproject.toml  setup.py
.circleci/: config.yml
.dependabot/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  main.workflow
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  master.yml  pr.yml  push.yml
actions/make/: Dockerfile  entrypoint.sh
actions/version_syncer/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
actions/version_syncer/version_syncer/: main.py
tests/: test_issue_8.py  test_mapping_configurations.py  test_optionals.py  test_typed_json_dataclass.py  test_utils.py
typed_json_dataclass/: __init__.py  typed_json_dataclass.py  utils.py
