[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "typed-json-dataclass"
version = "1.2.1"
description = "Make your dataclasses automatically validate their types"
authors = [ "Aaron <AaronBatilo@gmail.com>",]
license = "MIT"
readme = "README.md"
homepage = "http://github.com/abatilo/typed-json-dataclass"
repository = "http://github.com/abatilo/typed-json-dataclass"
keywords = [ "dataclasses", "dataclass", "json", "mypy", "pyre", "marshmallow", "attrs", "cattrs",]
classifiers = [ "Intended Audience :: Developers", "Development Status :: 5 - Production/Stable", "Topic :: Software Development :: Libraries :: Python Modules", "Environment :: Web Environment", "License :: OSI Approved :: MIT License", "Programming Language :: Python :: 3.7",]

[tool.poetry.dependencies]
python = "^3.7"
flake8-tuple = "^0.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8"
pytest = "^6.1"
coverage = "^5.3"
flake8-quotes = "^3.2"
flake8-deprecated = "^1.3"
flake8-mutable = "^1.2"
flake8-builtins = "^1.5"
flake8-bugbear = "^20.11"
flake8-blind-except = "^0.1.1"
flake8-class-newline = "^1.6"
flake8-import-order = "^0.18.1"
flake8-alfred = "^1.1"
pep8-naming = "^0.11.1"
flake8-comprehensions = "^3.3"
pytest-cov = "^2.10"
codecov = "^2.1"
