[tool.poetry]
name = "version_syncer"
version = "0.1.0"
description = "Syncs version from package.json to pyproject.toml"
authors = ["Aaron <AaronBatilo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
plac = "^1.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
sync = 'version_syncer:main.entrypoint'
